# QuickNote

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_STRUCTURE.md  LC스케줄러-DB통합-구현계획.md  LC스케줄러-MM관리-구현계획.md  LC스케줄러-MM관리-성능최적화-리팩토링계획.md  README.md  S3관리기능.md  SECURITY.md  STORE_STRUCTURE.md  eslint.config.js  index.html  package-lock.json  package.json  sched.md  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts  노션이관계획.md  리팩토링3대축.md  발견된 문제.md  업무 스케줄러 구축.md
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy-dev-backend.yml
.recovery/: reconstruct.mjs  recover_all.mjs  restore_plan.json  server_doc_backup_1781711920311.json
.serena/: project.yml
.serena/memories/: conventions.md  core.md  memory_maintenance.md  project_keywords.md  session_start_checklist.md  suggested_commands.md  task_completion.md  tech_stack.md
Plan/: 1_0_0_Claude_구현계획.md  1_0_0_Plan.md  1_1_0_Plan.md  1_1_1.md
api/: bookmark.js
docs/: database-architecture.md  lc-scheduler-database-policy.md  sync-architecture.md
infra/: .gitignore  README.md  cdk.json  migration-result.json  package-lock.json  package.json  tsconfig.json
infra/lib/: cognito-stack.ts  realtime-collab-stack.ts  sync-stack.ts
infra/scripts/: backfill-database-row-scope.ts  backfill-history-expires-at.ts  backfill-name-lower.ts  backfill-purge-at.ts  (+2 more)
public/: yt-embed.html  yt-embed.js
scripts/: bump-version.mjs  generate-pwa-icons.mjs
src/: App.tsx  Bootstrap.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: QuickNote.psd  icon.icns
src-tauri/migrations/: 001_initial.sql  002_kv_cache_metadata.sql
src-tauri/src/: lib.rs
wiki/: README.md
(+1247 files in other folders)
